--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: install nginx
-  apt: 
+  yum: 
     name:
       - nginx
     state: present
     update_cache: yes
-    cache_valid_time: 3600
+    #cache_valid_time: 3600
   become: yes
 
 - name: start nginx
